2007-04-10  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/BaseView.cs:
	Removed BuildNavPoint().

2007-03-29  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/BaseView.cs: Implement
	BuildNavPoint().

2007-03-21  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlProjectService.cs
	(OnEntryAdded): Instead of calling repo.Add() with the recursive
	arg set to true, do our own "recursive" adding requesting the list
	of files from the CombineEntry and sub-CombineEntry nodes. This 
	would prevent addition of files/folders that are not part of the 
	project but existed in the project directory at the time ti was added.

	Fix for bug #81184

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlFileSystemExtension.cs:
	Updated to not pass a path argument to GetRepository().

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	Updated to not pass a path argument to GetRepository().

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlProjectService.cs
	(GetRepository): No longer takes a path argument as it never uses
	it anyway.
	(OnEntryAdded): New callback to handle when a project or combine gets added.
	(VersionControlProjectService): Bind OnEntryAdded.

2007-03-19  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #81185 and then delves a bit deeper.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs
	(IsInstalled): Implemented.

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/Checkout.cs
	(Update): Added. Disable the menu item if no version control
	systems are installed.

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlSystem.cs:
	Add a virtual IsInstalled property.

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/SelectRepositoryDialog.cs